# netswitch

./: .gitignore  README.md  app.h.in  emak.ini  meson.build  netswitch.service  netswitch.sh
src/: app.c  nlrequest.c  nlrequest.h
